<resources>
    <string name="app_name">Newsi</string>
    <string name="trending_now">Trending now</string>
    <string name="article_image">Article image</string>
    <string name="liked">Liked</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="like">Like</string>
    <string name="dark_theme">Dark theme</string>
    <string name="couldnt_load_data">We can\'t load news from the server. Check Your internet connection</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="liked_news">Liked News</string>
    <string name="open_in_external">Open in external browser</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="more_options">More options</string>
    <string name="couldnt_load_new_data">We can\'t load current news. You see news loaded previously. Check Your internet connection</string>
    <string name="no_liked_news">You don\'t have any liked news. Add some by clicking hart icon on news.</string>
    <string name="channel_base_name">Fresh news</string>
    <string name="channel_base_desc">Notifications about loading news</string>
    <string name="fresh_news">Fresh news</string>
    <string name="fresh_news_content">"We loaded fresh news for You. Check it! &#x1f4f0;"</string>
    <string name="fresh_news_hint">Search news</string>
    <string name="find_news">Find news</string>
    <string name="hot_news_notification">Covid</string>
    <string name="news_not_found">News not found</string>
    <string name="show_hot_news">Show hot news bar</string>
    <string name="refresh">Refresh</string>
    <string name="cannot_open_web">Web page cannot be opened. Probably Your phone does not have installed browser</string>
    <string name="info">Info</string>
    <string name="info_dialog_desc">News displayed in this app comes from rapidapi.com/webit/api/webit-news-search . News are not filter by our app so we are not responsible for content in this application. \n\n App icon comes from flaticon.com</string>

    <string-array name="hot_news_keywords">
        <item>Covid</item>
        <item>US Election</item>
        <item>Biden</item>
        <item>Trump</item>
        <item>Netflix</item>
        <item>Football</item>
        <item>UFC</item>
        <item>NBA</item>
        <item>Weather</item>
        <item>Christmas</item>
        <item>2020</item>
        <item>Pope Francis</item>
        <item>Twitter</item>
        <item>PS5</item>
        <item>XBox</item>
        <item>Apple</item>
        <item>Samsung</item>
    </string-array>

</resources>