<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.myniprojects.newsi.ui.fragments.HomeFragment"
        android:label="@string/trending_now">
        <action
            android:id="@+id/action_homeFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>
    <fragment
        android:id="@+id/likedFragment"
        android:name="com.myniprojects.newsi.ui.fragments.LikedFragment"
        android:label="@string/liked_news">
        <action
            android:id="@+id/action_likedFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.myniprojects.newsi.ui.fragments.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.myniprojects.newsi.ui.fragments.NewsFragment" />
</navigation>